Fixing layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -250,7 +250,7 @@ nav.menubar {
     border-radius: 0;
     width: calc(100% - 240px - 244px);
     height: 100%;
-    padding: 10px;
+    /* padding: 10px; */
     float: left;
     overflow-y: auto;
     box-shadow: inset 0 0 0 1px #000;
@@ -309,27 +309,23 @@ img {
 	display: block;
 	position: relative;
 	float: right;
-	right: -10px;
 	min-width: 70px;
 	max-width: 170px;
-	min-height: fit-content;
-	padding: 25px;
+	min-height: 100%;
+	padding: 24px 25px 0px 6px;
 	overflow: hidden;
 }
 .right-shelf {
-	position: relative; /* default: fixed */
-    float: right; /* default:  */
-    background-color: #333;
+	position: inherit;
+	float: right;
+	background-color: #333;
 	border: 1px solid #000;
 	height: auto;
-    /* padding: 10px 0; */
-    margin-bottom: 3px;
-	right: -62px; /* default: -49px; */
-	/* top: 5%; */
+	margin-bottom: 3px;
+	right: -62px;
 	white-space: nowrap;
     width: 70px;
-    overflow: hidden;
-	z-index: 100;
+    z-index: 1;
 	-webkit-border-radius: 3px 0 0 3px;
 	-moz-border-radius: 3px 0 0 3px;
 	-ms-border-radius: 3px 0 0 3px;
@@ -528,7 +524,7 @@ input[type=checkbox]:checked {
     color: #51a8ff;
     width: 600px;
     height: auto;
-    /* margin: 10px; */
+    margin: 10px;
     resize: none;
 }
 #template-view * {
