--- a/css/modal.css
+++ b/css/modal.css
@@ -24,7 +24,9 @@
     border-radius: 0;
     font-family: 'Ubuntu', sans-serif !important;
     min-width: 240px;
-    min-height: 200px;
+    width: auto;
+    /* min-height: 200px; */
+    height: auto;
     padding: 25px 5px 5px 5px;
     margin-top: 62px;
     z-index: 3;
@@ -47,9 +49,11 @@
     color: #ccc;
     top: 0;
     left: 0;
+    width: 388px;
     height: 24px;
     padding: 4px 8px;
     line-height: normal; /* 1.15 */
+    text-overflow: ellipsis;
 }
 
 #content {
@@ -141,7 +145,7 @@
     font-weight: 500;
     color: #51a8ff;
     min-width: fit-content;
-    width: 100%; /* default: 460px; */
+    width: 460px; /* default: 460px; */
     height: 26px;
     padding: 4px 8px;
     margin-bottom: 5px;
@@ -165,7 +169,7 @@ select.modal-input {
     font-family: Montserrat, sans-serif !important;
     font-weight: 500;
     color: #51a8ff;
-    width: 100%;
+    width: 460px;
     height: 26px;
     padding: 4px;
     margin-bottom: 5px;
