--- a/css/notification.css
+++ b/css/notification.css
@@ -39,7 +39,7 @@
 	margin: 0 auto;
 	/* margin-left: -125px; */
 	box-shadow: 0 2px 5px 1px rgba(12,13,14,0.8);
-	z-index: 1;
+	z-index: 100;
 	/* -webkit-animation: /*fadein 0.5s, /fadeout 0.5s /*2.5s; */
 }
 #notification.hide {
